cmake_minimum_required(VERSION 3.21)
project(Os_design)

set(CMAKE_CXX_STANDARD 14)

add_executable(Os_design OS_pcb.cpp)
#add_executable(Os_design final.cpp)
#add_executable(Os_design test2.cpp)
#add_executable(Os_design test.cpp)
#add_executable(Os_design PS.cpp)
#add_executable(Os_design NPS.cpp)
